Address CRUD methods added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.error.include-message=always
+spring.datasource.url=jdbc:postgresql://localhost:5432/transport
+spring.datasource.username=postgres
+spring.datasource.password=geli
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+spring.jpa.open-in-view=false
 
