--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/transport
 spring.datasource.username=postgres
 spring.datasource.password=geli
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 spring.jpa.open-in-view=false
 
