--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,12 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 spring.jpa.open-in-view=false
 
+transport.reducing.limit1=30
+transport.reducing.limit2=60
+transport.reducing.limit3=120
+transport.reducing.percent1=5
+transport.reducing.percent2=10
+transport.reducing.percent3=15
+
+
+
