--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,9 @@ transport.reducing.percent1=5
 transport.reducing.percent2=10
 transport.reducing.percent3=15
 
+transport.jwtData.issuer=TransportApp
+transport.jwtData.alg=HMAC512
+transport.jwtData.secret=mysecret
+transport.jwtData.duration=10m
 
 
